force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_PG2_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Rpl_PG2_Specialization__c</fullName>
    <label>PG2 Specialization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>