force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_PG_Overall_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Rpl_PG_Overall_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PG Overall Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>