force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_PG_Rejected_Semester_Marksheets__c.field-meta.xml
<CustomField>
    <fullName>Rpl_PG_Rejected_Semester_Marksheets__c</fullName>
    <label>PG Rejected Semester Marksheets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>