force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Program_Type__c</fullName>
    <formula>TEXT(Contact__r.Primary_Academic_Program__r.Program_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Type</label>
    <type>Text</type>
</CustomField>