force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Rpl_QR_Code__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=250x250&amp;cht=qr&amp;chl=&apos;+ Id,&apos;Test&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>