force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Reason_for_Documentation_Fail__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Reason_for_Documentation_Fail__c</fullName>
    <label>Reason for Documentation Fail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>