force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Reason_For_Education_Gap__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Reason_For_Education_Gap__c</fullName>
    <label>Reason For Education Gap</label>
    <type>TextArea</type>
</CustomField>