force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_School__c.field-meta.xml
<CustomField>
    <fullName>Rpl_School__c</fullName>
    <label>School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>