force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Selected_Company__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Selected_Company__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>