force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Sem_3_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Sem_3_CGPA__c</fullName>
    <label>Sem 3 CGPA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>