force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Specialization_c__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Specialization_c__c</fullName>
    <label>Specialization</label>
    <length>200</length>
    <type>Text</type>
</CustomField>