force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_SRN__c.field-meta.xml
<CustomField>
    <fullName>Rpl_SRN__c</fullName>
    <formula>Contact__r.SRN_Number__c</formula>
    <label>SRN</label>
    <type>Text</type>
</CustomField>