force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Status__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Validation Pending</fullName>
            </value>
            <value>
                <fullName>Document Validation Pending</fullName>
                <default>true</default>
                <label>Document Validation Pending</label>
            </value>
            <value>
                <fullName>Registration Successfully</fullName>
            </value>
            <value>
                <fullName>Document Validation Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>