force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Student_Image__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Student_Image__c</fullName>
    <label>Student Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>