force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Student_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Student_Image_URL__c</fullName>
    <formula>Contact__r.Student_Image__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Student Image Fetched From Contacts</inlineHelpText>
    <label>Student Image URL</label>
    <type>Text</type>
</CustomField>