force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Total_Backlogs__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Total_Backlogs__c</fullName>
    <label>Total Backlogs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>