force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_UG_Board_Name_University_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_UG_Board_Name_University_Name__c</fullName>
    <label>UG Board Name/ University Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>