force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_UG_Degree__c.field-meta.xml
<CustomField>
    <fullName>Rpl_UG_Degree__c</fullName>
    <label>UG Degree</label>
    <length>20</length>
    <type>Text</type>
</CustomField>