force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_UG_Overall_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Rpl_UG_Overall_CGPA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>UG Overall CGPA</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>