force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_UG_Stream__c.field-meta.xml
<CustomField>
    <fullName>Rpl_UG_Stream__c</fullName>
    <label>UG Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>