force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_UG_Verified_Semester_Marksheets__c.field-meta.xml
<CustomField>
    <fullName>Rpl_UG_Verified_Semester_Marksheets__c</fullName>
    <label>UG Verified Semester Marksheets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>