force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_University_Mail_ID__c.field-meta.xml
<CustomField>
    <fullName>Rpl_University_Mail_ID__c</fullName>
    <label>University Mail - ID</label>
    <type>Email</type>
</CustomField>