force-app/main/default/objects/Rpl_Student_Registration__c/fields/Rpl_Year_Of_Study__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Year_Of_Study__c</fullName>
    <formula>IF(
OR(
VALUE(RIGHT(Contact__r.Active_Semester__r.Name, 1)) = 1,
VALUE(RIGHT(Contact__r.Active_Semester__r.Name, 1)) = 2
),
1,
IF(
OR(
VALUE(RIGHT(Contact__r.Active_Semester__r.Name, 1)) = 3,
VALUE(RIGHT(Contact__r.Active_Semester__r.Name, 1)) = 4
),
2,
IF(
OR(
VALUE(RIGHT(Contact__r.Active_Semester__r.Name, 1)) = 5,
VALUE(RIGHT(Contact__r.Active_Semester__r.Name, 1)) = 6
),
3,
IF(
OR(
VALUE(RIGHT(Contact__r.Active_Semester__r.Name, 1)) = 7,
VALUE(RIGHT(Contact__r.Active_Semester__r.Name, 1)) = 8
),
4,
IF(
OR(
VALUE(RIGHT(Contact__r.Active_Semester__r.Name, 1)) = 9,
VALUE(RIGHT(Contact__r.Active_Semester__r.Name, 1)) = 10
),
5,
0
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Of Study</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>