force-app/main/default/objects/Rpl_Student_Registration__c/fields/UG_OverAll_Percentage__c.field-meta.xml
<CustomField>
    <fullName>UG_OverAll_Percentage__c</fullName>
    <label>UG OverAll Percentage</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>