force-app/main/default/objects/Rpl_Student_Registration__c/fields/VH__c.field-meta.xml
<CustomField>
    <fullName>VH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Vertical Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Student_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>