force-app/main/default/objects/Rpl_Student_Registration__c/listViews/Approved_Students.listView-meta.xml
<ListView>
    <fullName>Approved_Students</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Rpl_Personal_Mail_ID__c</columns>
    <columns>Rpl_Specialization_c__c</columns>
    <columns>Rpl_Contact_No__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Reva_Placement__c</columns>
    <columns>Rpl_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rpl_School__c</field>
        <operation>contains</operation>
        <value>B. Tech in Computer Science and Information Technology</value>
    </filters>
    <label>Approved Students</label>
</ListView>