force-app/main/default/objects/Rpl_Student_Registration__c/listViews/Blocked_Students.listView-meta.xml
<ListView>
    <fullName>Blocked_Students</fullName>
    <columns>NAME</columns>
    <columns>Rpl_SRN__c</columns>
    <columns>Rpl_Is_Blocked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rpl_Is_Blocked__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Blocked Students</label>
</ListView>