force-app/main/default/objects/Rpl_Student_Registration__c/listViews/This_Year_Approved_Students.listView-meta.xml
<ListView>
    <fullName>This_Year_Approved_Students</fullName>
    <columns>NAME</columns>
    <columns>Rpl_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rpl_Status__c</field>
        <operation>equals</operation>
        <value>Registration Successfully</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>This Year Approved Students</label>
</ListView>